--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@ repl-temp-*
 # This does not need to be tracked since it is a soft link
 # to the public/assets directory
 assets
+public/elm.js
 
 !public/assets/
